flux/apps/base/authentik/security/authorization-policy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authentik-ingress-authz
  namespace: authentik
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-system"]
    - from:
        - source:
            namespaces: ["authentik"]
